[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/pixel_theme_reverse.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gameplay/stats-layer/stats-layer.gd" type="Script" id=2]

[node name="StatsLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Stats" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.137255, 0.172549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Stats/VBoxContainer"]
margin_right = 128.0
margin_bottom = 18.0
alignment = 1

[node name="Name" type="Label" parent="Stats/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 50.0
margin_bottom = 18.0
text = "Hero"

[node name="HP" type="Label" parent="Stats/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 116.0
margin_bottom = 18.0
text = "HP8/10"

[node name="HBoxContainer2" type="HBoxContainer" parent="Stats/VBoxContainer"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 54.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/VBoxContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 64.0
margin_bottom = 36.0
custom_constants/separation = 0
alignment = 1

[node name="Level" type="Label" parent="Stats/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 52.0
margin_bottom = 18.0
text = "LVL01"
align = 2

[node name="Magic" type="Label" parent="Stats/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 52.0
margin_bottom = 36.0
text = "MAG01"
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Stats/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_right = 116.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="Attack" type="Label" parent="Stats/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 48.0
margin_bottom = 18.0
text = "ATK01"

[node name="Defense" type="Label" parent="Stats/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 36.0
text = "DEF01"

[node name="LevelUpContainer" type="HBoxContainer" parent="Stats/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 128.0
margin_bottom = 72.0
alignment = 1

[node name="AttackUp" type="Button" parent="Stats/VBoxContainer/LevelUpContainer"]
margin_left = 14.0
margin_right = 44.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../MagicUp")
focus_neighbour_right = NodePath("../DefenseUp")
focus_next = NodePath("../DefenseUp")
focus_previous = NodePath("../MagicUp")
text = "ATK"

[node name="DefenseUp" type="Button" parent="Stats/VBoxContainer/LevelUpContainer"]
margin_left = 48.0
margin_right = 76.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../AttackUp")
focus_neighbour_right = NodePath("../MagicUp")
focus_next = NodePath("../MagicUp")
focus_previous = NodePath("../AttackUp")
text = "DEF"

[node name="MagicUp" type="Button" parent="Stats/VBoxContainer/LevelUpContainer"]
margin_left = 80.0
margin_right = 114.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../DefenseUp")
focus_neighbour_right = NodePath("../AttackUp")
focus_next = NodePath("../AttackUp")
focus_previous = NodePath("../DefenseUp")
text = "MAG"

[node name="KillContainer" type="VBoxContainer" parent="Stats/VBoxContainer"]
margin_top = 54.0
margin_right = 128.0
margin_bottom = 72.0

[node name="Kills" type="Label" parent="Stats/VBoxContainer/KillContainer"]
margin_right = 128.0
margin_bottom = 18.0
text = "KILLS LEFT:3"
align = 1

[connection signal="pressed" from="Stats/VBoxContainer/LevelUpContainer/AttackUp" to="." method="_on_AttackUp_pressed"]
[connection signal="pressed" from="Stats/VBoxContainer/LevelUpContainer/DefenseUp" to="." method="_on_DefenseUp_pressed"]
[connection signal="pressed" from="Stats/VBoxContainer/LevelUpContainer/MagicUp" to="." method="_on_MagicUp_pressed"]
